src/apps/templates/system/expose/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-exposed-dashboard
  namespace: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.jeancloude.club`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    services:
    - kind: TraefikService
      name: api@internal
